{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 27,
  "lineage": "9a9bcfa3-8826-3c87-b040-b24ab326bc59",
  "resources": [
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "tharun",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c707afe88413ee16",
            "arn": "arn:aws:ec2:eu-north-1:321652031768:elastic-ip/eipalloc-0c707afe88413ee16",
            "association_id": "eipassoc-04f511650ba3e1301",
            "domain": "vpc",
            "id": "eipalloc-0c707afe88413ee16",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-02ecf819faa4c84fa",
            "private_dns": "ip-10-0-1-153.eu-north-1.compute.internal",
            "private_ip": "10.0.1.153",
            "public_dns": "ec2-13-61-161-135.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.161.135",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "t-eip"
            },
            "tags_all": {
              "Name": "t-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:internet-gateway/igw-0add530523a2bb916",
            "id": "igw-0add530523a2bb916",
            "owner_id": "321652031768",
            "region": "eu-north-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-02673ab3a5c25cda6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tharun",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa91bc90632c73c9",
            "arn": "arn:aws:ec2:eu-north-1:321652031768:instance/i-03113ff2975f34b00",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03113ff2975f34b00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tharun-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051dde5b66564c5f6"
              }
            ],
            "primary_network_interface_id": "eni-051dde5b66564c5f6",
            "private_dns": "ip-10-0-1-16.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_ip": "16.16.217.85",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08aa97718dcfeb559",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee5a8d9f4ea98785",
            "tags": {
              "Name": "tharun"
            },
            "tags_all": {
              "Name": "tharun"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051a3008072b2ecd5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "i-03113ff2975f34b00",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.key.aws_key_pair.t_key",
            "module.sg.aws_security_group.t_sg",
            "module.subnet.aws_subnet.tharun_public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tharun_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa91bc90632c73c9",
            "arn": "arn:aws:ec2:eu-north-1:321652031768:instance/i-0089523f0e287217a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0089523f0e287217a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tharun-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0de882c1b0eebbd9c"
              }
            ],
            "primary_network_interface_id": "eni-0de882c1b0eebbd9c",
            "private_dns": "ip-10-0-2-144.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.144",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-029cc9a2771bdebdc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0780d45793f484714",
            "tags": {
              "Name": "tharun_pvt"
            },
            "tags_all": {
              "Name": "tharun_pvt"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051a3008072b2ecd5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "i-0089523f0e287217a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.key.aws_key_pair.t_key",
            "module.sg.aws_security_group.t_sg",
            "module.subnet.aws_subnet.tharun_private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tharun",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c707afe88413ee16",
            "association_id": "eipassoc-04f511650ba3e1301",
            "connectivity_type": "public",
            "id": "nat-03623ba8f52c587db",
            "network_interface_id": "eni-02ecf819faa4c84fa",
            "private_ip": "10.0.1.153",
            "public_ip": "13.61.161.135",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ee5a8d9f4ea98785",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eip.aws_eip.tharun",
            "module.subnet.aws_subnet.tharun_public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tharun_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:route-table/rtb-06ff9bb370e5e6a86",
            "id": "rtb-06ff9bb370e5e6a86",
            "owner_id": "321652031768",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03623ba8f52c587db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tharun_private"
            },
            "tags_all": {
              "Name": "tharun_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02673ab3a5c25cda6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "rtb-06ff9bb370e5e6a86",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.eip.aws_eip.tharun",
            "module.nat.aws_nat_gateway.tharun",
            "module.subnet.aws_subnet.tharun_public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tharun_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:route-table/rtb-06d51850b922f9905",
            "id": "rtb-06d51850b922f9905",
            "owner_id": "321652031768",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0add530523a2bb916",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tharun_public"
            },
            "tags_all": {
              "Name": "tharun_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02673ab3a5c25cda6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "rtb-06d51850b922f9905",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026ac0ba9279343b7",
            "region": "eu-north-1",
            "route_table_id": "rtb-06ff9bb370e5e6a86",
            "subnet_id": "subnet-0780d45793f484714"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eip.aws_eip.tharun",
            "module.nat.aws_nat_gateway.tharun",
            "module.rt.aws_route_table.tharun_private",
            "module.subnet.aws_subnet.tharun_private",
            "module.subnet.aws_subnet.tharun_public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ba14d0aaf77eaf3",
            "region": "eu-north-1",
            "route_table_id": "rtb-06d51850b922f9905",
            "subnet_id": "subnet-0ee5a8d9f4ea98785"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.rt.aws_route_table.tharun_public",
            "module.subnet.aws_subnet.tharun_public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "t_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:security-group/sg-051a3008072b2ecd5",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051a3008072b2ecd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "t_sg",
            "name_prefix": "",
            "owner_id": "321652031768",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "t_sg"
            },
            "tags_all": {
              "Name": "t_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02673ab3a5c25cda6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "sg-051a3008072b2ecd5",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tharun_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:subnet/subnet-0780d45793f484714",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0780d45793f484714",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321652031768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "private subnet"
            },
            "tags_all": {
              "Name": "private subnet"
            },
            "vpc_id": "vpc-02673ab3a5c25cda6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "subnet-0780d45793f484714",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tharun_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:subnet/subnet-0ee5a8d9f4ea98785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee5a8d9f4ea98785",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321652031768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-02673ab3a5c25cda6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "subnet-0ee5a8d9f4ea98785",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:vpc/vpc-02673ab3a5c25cda6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005d751ba375f9bca",
            "default_route_table_id": "rtb-0fd86a229955f10f2",
            "default_security_group_id": "sg-0401ef2b427cab372",
            "dhcp_options_id": "dopt-0ae9db196ad1a105f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02673ab3a5c25cda6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd86a229955f10f2",
            "owner_id": "321652031768",
            "region": "eu-north-1",
            "tags": {
              "Name": "tharun-vpc"
            },
            "tags_all": {
              "Name": "tharun-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "vpc-02673ab3a5c25cda6",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}